--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Tutorial on Flask: A Web socket example</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}""> 
+    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+    <title>Byte Bandits' RPS Battle Royale</title>
 
 
-<script type="text/javascript">
-    $(document).ready(function() {
-    // sending a connect request to the server.
-    var socket = io.connect('http://localhost:5000');
-    socket.emit('after connect', function(connectMsg) {
-    $('#log').append('<br>' + $('<div/>').text('What is the intention of the code: ' + connectMsg.data).html());
-    });
-    });
-    </script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+        // sending a connect request to the server.
+        var socket = io.connect('http://localhost:5000');
+        socket.emit('after connect', function(connectMsg) {
+        $('#log').append('<br>' + $('<div/>').text('What is the intention of the code: ' + connectMsg.data).html());
+        });
+        });
+        </script>
 
 </head>
+<h1>
+    <img class="logo" src="static/images/rps.png">
+</h1>
 <body>
     <h1>Example on SocketIO : EduCBA</h1>
     <h2>Message Received:</h2>
