--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -10,3 +10,27 @@ html {
     width: 250px;
     height: 250px
 }
+
+.login_title {
+    font-size: 2rem;
+    text-align: center;
+}
+
+.formHolder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.register_link {
+    font-size: 1.2rem;
+    color: black;
+
+}
+
+.input_box {
+    border-radius: 6px;
+    font-size: 1rem;
+    padding:10px;
+}
