--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}""> 
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}"> 
     <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
     <title>Byte Bandits' RPS Battle Royale</title>
 
