--- a/templates/index.html
+++ b/templates/index.html
@@ -25,5 +25,6 @@
     <h1>Example on SocketIO : EduCBA</h1>
     <h2>Message Received:</h2>
     <div id="log"></div>
+    <a href="/match" class="matchLink">Match frontend preview (work in progress)</a>
     </body>
     </html>
