--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,15 @@
 
 </head>
 <h1>
+    <div class="title-banner"s>
+        <div class="leftBannerText">
+        Byte Bandits
+        </div>
     <img class="logo" src="static/images/rps.png">
+        <div class="rightBannerText">
+        Rock Paper Scissors
+        </div>
+    </div>
 </h1>
 <body>
     <h1>Example on SocketIO : EduCBA</h1>
