--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -7,8 +7,10 @@ html {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 250px;
-    height: 250px
+    width: 225px;
+    height: 225px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .login_title {
@@ -65,6 +67,42 @@ a.matchLink:hover {
 
 .vs {
     font-size: 70px;
+    font-weight: bold;
     text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: monospace;
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+}
+
+.title-banner {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 1px;
+    border: inset black 8px;
+    /* box-shadow: 0 0 10px 10px white; */
+}
+
+.leftBannerText {
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+    font-size: 70px;
+    font-family: monospace;
+    position: relative;
+    left: 150px;
+    text-align: right;
+}
+
+.rightBannerText {
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+    font-family: monospace;
+    position: relative;
+    left: -110px;
+    font-size: 60px;
+    text-align: left;
+    margin-right: 200px;
 }
