Protected Layout, still few bugs

--- a/templates/register.html
+++ b/templates/register.html
@@ -16,7 +16,11 @@
     <br/>
     <input id="password" class="input_box" type="password" placeholder="Password"/>
     <br />
+    <input type="password" id="c_pass" placeholder="Confirm New Password"/>
+    <br />
     <input id="display" class="input_box" type="text" placeholder="Display Name!"/>
+    <br />
+    <div>{{ error }}</div>
     <br />
     <input type="submit" onclick="sendRegister()"/>
 </form>
