--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,8 @@
     <br/>
     <input id="password" class="input_box" type="password" placeholder="Password"/>
     <br />
+    <div>{{ error }}</div>
+    <br />
     <input type="submit" onclick="sendLogin()"/>
 </form>
 <br/>
