--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,9 +8,21 @@
 
 <script type="text/javascript" src="../static/javascript/loginScript.js"></script>
 
-<div>{{display}}</div>
+<div>Display Name: {{display}}</div>
+<div>Username: {{username}}</div>
+<br />
+<div>Change Info?</div>
+<form >
+<input type="text" id="display" placeholder="New Display Name"/>
+<br />
+<input type="password" id="password" placeholder="New Password"/>
+<br />
+<input type="password" id="c_pass" placeholder="Confirm New Password"/>
+<br />
+<div>{{ error }}</div>
+<br />
+<input type="submit" onclick="edit()"/>
+</form>
 
-<div>{{username}}</div>
-<button>Edit</button>
 
 </html>
