--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,6 +24,8 @@
 <input type="submit" class="submit" onclick="edit()"/>
 </form>
 <a class="register_link" href="{{url_for('logout')}}" >Logout</a>
+<br />
+<a class="register_link" href="{{url_for('index')}}" >Go Home</a>
 </div>
 
 
