--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,7 @@
         </div>
     </div>
 </h1>
-<body>
-    <h1>Example on SocketIO : EduCBA</h1>
-    <h2>Message Received:</h2>
-    <div id="log"></div>
-    <a href="/match" class="matchLink">Match frontend preview (work in progress)</a>
-    </body>
+<br />
+<a class="register_link" href="{{url_for('profile')}}" >Profile</a>
 
 </html>
