--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
     <br/>
     <input id="password" class="input_box" type="password" placeholder="Password"/>
     <br/>
-    <input type="password" class="confirm_pass" placeholder="Confirm Password"/>
+    <input id="c_pass" type="password" class="confirm_pass" placeholder="Confirm Password"/>
     <br/>
     <input type="submit" class="submit" onclick="sendRegister()"/>
 </form>
