Style changes for profile

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,8 +10,8 @@
 
 <div class="formHolder">
 <img src="{{avatar}}" alt="your current avatar"/>
-<div>Display Name: {{display}}</div>
-<div>Username: {{username}}</div>
+<div style="color:whitesmoke; padding: 10px; font-size: 1rem;">Display Name: {{display}}</div>
+<div style="color:whitesmoke; padding: 10px; font-size: 1rem;">Username: {{username}}</div>
 <br />
 <div style="color:whitesmoke; padding: 10px; font-size: 1rem;">Need a Change?</div>
 <form >
