Update register.html, removed avatars

--- a/templates/register.html
+++ b/templates/register.html
@@ -16,21 +16,12 @@
 </div>
 <br/>
 <br/>
-<div class="avatar-container">
-    <div style="color:whitesmoke; font-size: 1.2rem"> Select an Avatar </div>
-    <br/>
-    <div class="individual-avatar a2"> <div class="atext">Rock</div> </div>
-    <div class="individual-avatar a1"> <div class="atext">Paper</div> </div>
-    <div class="individual-avatar a3"> <div class="atext">Scissors</div> </div>
-</div>
-<br/>
-<br/>
 
 <div class="formHolder">
 <form>
-    <input id="username" class="input_box" type="text" placeholder="Username"/>
+    <input id="username" class="input_box" type="text" placeholder="Username" maxlength="10"/>
     <br/>
-    <input id="display" class="input_box" type="text" placeholder="Display Name"/>
+    <input id="display" class="input_box" type="text" placeholder="Display Name" maxlength="12"/>
     <br/>
     <input id="password" class="input_box" type="password" placeholder="Password"/>
     <br/>
@@ -50,3 +41,12 @@
 
 
 </html>
+
+
+{#<div class="avatar-container">#}
+{#    <div style="color:whitesmoke; font-size: 1.2rem"> Select an Avatar </div>#}
+{#    <br/>#}
+{#    <div class="individual-avatar a2"> <div class="atext">Rock</div> </div>#}
+{#    <div class="individual-avatar a1"> <div class="atext">Paper</div> </div>#}
+{#    <div class="individual-avatar a3"> <div class="atext">Scissors</div> </div>#}
+{#</div>#}
