Added new lobby menu title

--- a/templates/match.html
+++ b/templates/match.html
@@ -9,7 +9,16 @@
     <script type="text/javascript" charset="utf-8" src="static/javascript/scripts.js"></script>
 </script>
 </head>
-<h1 id="matchHeader" style="text-align: center;">Lobby Menu</h1>
+{#<h1 id="matchHeader" style="text-align: center;">Lobby Menu</h1>#}
+<div class="container">
+  <div class="container behind-screen">
+    <div class="container screen">
+      <p>Lobby Menu</p>
+    </div>
+  </div>
+</div>
+<br/>
+<br/>
 <button onclick="createRoom()">Click me to create a lobby</button>
 <br>
 
