--- a/templates/profile.html
+++ b/templates/profile.html
@@ -31,7 +31,7 @@
         <br />
         <input type="password" id="password" class="input_box" placeholder="New Password"/>
         <br />
-        <input type="password" class="confirm_pass" placeholder="Confirm New Password"/>
+        <input type="password" class="confirm_pass" id="c_pass" placeholder="Confirm New Password"/>
         <div>{{ error }}</div>
         <input type="submit" class="submit" onclick="edit()"/>
     </form>
