bunch more lobby stuff, just missing user account integration

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -7,6 +7,7 @@ html {
     background: url("https://i.pinimg.com/originals/48/fb/f1/48fbf1ed8aeab2ca49b0e4438d8e7c5c.gif") no-repeat center center fixed;
     background-size: cover;
     border: solid black 5px;
+    color: white;
     font-family: "Ghoul";
     font-weight: 1000;
 }
@@ -114,7 +115,7 @@ a.matchLink:hover {
     font-weight: bold;
     text-align: center;
     font-family: monospace;
-    color: white;
+    color: yellow;
     -webkit-text-stroke-width: 3px;
     -webkit-text-stroke-color: black;
 }
