Link for home from match

--- a/templates/match.html
+++ b/templates/match.html
@@ -31,7 +31,10 @@
 </form> <br>
 
 <button onclick="leaveRoom()">Leave Lobby</button>
+<br />
+<br />
 
+<a class="register_link" href="{{url_for('index')}}" >Go Home</a>
 
 <body>
     <div id="battleground">
