fixed issues with lobby header

--- a/templates/match.html
+++ b/templates/match.html
@@ -12,7 +12,7 @@
 <div class="container">
   <div class="container behind-screen">
     <div class="container screen">
-      <p>Lobby Menu</p>
+      <p id="lobbyBanner">Lobby Menu</p>
     </div>
   </div>
 </div>
@@ -47,7 +47,7 @@
 
     <h1 style="text-align: center; font-size: 50px;" id="player2Name"></h1>
     <div id="optionRow2">
-        <img class="battleOption" src="static/images/qMark.png"> <!---Onlick function so the images have functionality and animation -->
+        <img class="battleOption" src="static/images/qMark.png"> 
         <img class="battleOption" src="static/images/qMark.png">
         <img class="battleOption" src="static/images/qMark.png">
     </div>
